Scrolling fixes and mobile improvements
Leaving background scrollable with ImageView open was breaking
in Chrome on Android. Reverted to setting `overflow: hidden` and
instead prevented page shift by measuring scrollbar width and
adding extra `padding-right` to compensate.

Setting focus based on mouseover caused page scroll to move when
mousing over images not fully on screen, which was disorienting.
Instead, mouseover now blurs the active element without setting
a new focus. This does reset tabindex, but only triggers with a
mouse event, so it should have little affect on accessibility.

For mobile, onTouchEnter now used to mimic hover/tabIndex and
open text dropdown. ImageView padding and close button size
adjusted to prevent the 'X' from overlapping with images, since
depending on the image it could become impossible to see. On
mobile with no ESC key and full-screen content, this could result
in becoming 'trapped' in the ImageView overlay.

--- a/frontend/src/scss/components/_image-view.scss
+++ b/frontend/src/scss/components/_image-view.scss
@@ -10,7 +10,7 @@
     border-radius: 10px;
     background-color: $viewport-bg;
     color: $post-text-color;
-    padding: 1.5em;
+    padding: 2em;
     max-width: $max-image-width;
     line-height: initial;
 
@@ -32,11 +32,12 @@
       background-color: initial;
       font-size: 20px;
       cursor: pointer;
+      padding: 0;
       border: 0;
 
       .fa {
-        opacity: .1;
-        padding: 1em;
+        opacity: .25;
+        padding: .5em;
       }
 
       &:hover, &:focus {
